force-app/main/default/objects/Flight_Segment__c/Flight_Segment__c.object-meta.xml
<CustomObject>
    <label>Flight Segment</label>
    <nameField>
        <displayFormat>SEG-{0000}</displayFormat>
        <label>Flight Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>