force-app/main/default/objects/Flight_Segment__c/fields/Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Code__c</fullName>
    <label>Carrier Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>