force-app/main/default/objects/Flight_Segment__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>